feat: Implement base button and input components; create login and registration forms with validation
- Added BaseButton and BaseInput classes for reusable UI components.
- Developed login-form.html and register-form.html with respective styles and scripts.
- Implemented form validation for login and registration processes.
- Created responsive styles for login and registration forms.
- Added quiz card component for displaying quizzes in a grid layout.
- Enhanced intro section with smooth scrolling to quiz list.

--- a/fee/index.html
+++ b/fee/index.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="assets/css/icons.css">
         <link rel="stylesheet" href="assets/css/common.css">
         <link rel="stylesheet" href="components/layout/navbar/navbar.css">
-        <link rel="stylesheet" href="components/modules/home/intro.css">
-        <link rel="stylesheet" href="components/base/card/quiz-card.css">
+        <link rel="stylesheet" href="components/modules/home/intro/intro.css">
+        <link rel="stylesheet"
+            href="components/modules/home/card/quiz-card.css">
         <link rel="stylesheet" href="components/layout/footer/footer.css">
         <style>
         /* CSS nội bộ layout trang */
