feat: Add custom error pages for 403 and 404; enhance styling and responsiveness

--- a/fee/about.html
+++ b/fee/about.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>About Us - Quiz App</title>
-        <link rel="stylesheet" href="assets/css/controls.css">
-        <link rel="stylesheet" href="assets/css/icons.css">
-        <link rel="stylesheet" href="assets/css/common.css">
+        <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="components/layout/navbar/navbar.css">
         <link rel="stylesheet"
             href="components/modules/about/intro/intro.css">
