--- a/fee/index.html
+++ b/fee/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Quiz App</title>
-        <link rel="stylesheet" href="assets/css/controls.css">
-        <link rel="stylesheet" href="assets/css/icons.css">
-        <link rel="stylesheet" href="assets/css/common.css">
+        <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="components/layout/navbar/navbar.css">
         <link rel="stylesheet" href="components/modules/home/intro/intro.css">
         <link rel="stylesheet"
