--- a/fee/quizzes.html
+++ b/fee/quizzes.html
@@ -2,10 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Quiz App</title>
-        <link rel="stylesheet" href="assets/css/controls.css">
-        <link rel="stylesheet" href="assets/css/icons.css">
-        <link rel="stylesheet" href="assets/css/common.css">
+        <title>Quizzes - Quiz App</title>
+        <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="components/layout/navbar/navbar.css">
         <link rel="stylesheet" href="components/modules/home/intro/intro.css">
         <link rel="stylesheet"
