feat: Add contact page with form and information sections; implement responsive design

--- a/fee/quizzes.html
+++ b/fee/quizzes.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Quiz App</title>
+        <title>Quizzes - Quiz App</title>
         <link rel="stylesheet" href="assets/css/controls.css">
         <link rel="stylesheet" href="assets/css/icons.css">
         <link rel="stylesheet" href="assets/css/common.css">
