feat: Implement Role Management and User Management pages with search, filter, and pagination functionalities
- Added RoleManagementPage class with components for role creation, editing, and deletion.
- Implemented search and filter features for roles based on name and status.
- Integrated pagination for role listing.
- Created UserManagementPage class with similar functionalities for user management.
- Included form validation for user creation and editing.
- Styled components with CSS for better UI/UX.

--- a/fee/management.html
+++ b/fee/management.html
@@ -10,6 +10,12 @@
         <link rel="stylesheet" href="components/layout/footer/footer.css">
         <link rel="stylesheet"
             href="components/modules/management/quiz-management/quiz-management-page.css">
+        <link rel="stylesheet"
+            href="components/modules/management/role-management/role-management-page.css">
+        <link rel="stylesheet"
+            href="components/modules/management/user-management/user-management-page.css">
+        <link rel="stylesheet"
+            href="components/modules/management/question-management/question-management-page.css">
     </head>
     <body>
         <!-- Navbar -->
