--- a/fee/403.html
+++ b/fee/403.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>403 - Forbidden</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/error.css">
     </head>
@@ -19,9 +22,12 @@
                 <p class="error-message">
                     You don't have permission to access this page.
                 </p>
-                <a href="index.html" class="btn btn--primary btn-back">Back to
+                <a href="index.html" class="btn btn-primary btn-back">Back to
                     Home</a>
             </div>
         </div>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
