--- a/fee/contact.html
+++ b/fee/contact.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact - Quizzes</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/contact.css">
         <link rel="stylesheet" href="components/modules/contact/contact.css">
@@ -27,6 +30,8 @@
 
         <div id="app-footer"></div>
 
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module"
             src="components/modules/contact/contact.js"></script>
     </body>
