--- a/fee/index.html
+++ b/fee/index.html
@@ -3,17 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Quiz App</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="components/layout/navbar/navbar.css">
         <link rel="stylesheet" href="components/modules/home/intro/intro.css">
         <link rel="stylesheet"
             href="components/modules/home/card/quiz-card.css">
         <link rel="stylesheet" href="components/layout/footer/footer.css">
-        <style>
-        /* CSS nội bộ layout trang */
-        .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
-        .section-title { text-align: center; margin: 40px 0 20px; font-size: 24px; font-weight: bold; text-transform: uppercase; }
-    </style>
     </head>
     <body>
 
@@ -22,13 +20,16 @@
         <div id="app-intro"></div>
 
         <main class="container">
-            <h2 id="quiz-list-title" class="section-title">Quizzes</h2>
+            <h2 id="quiz-list-title"
+                class="text-center my-5 fw-bold text-uppercase fs-4">Quizzes</h2>
 
             <div id="quiz-list-container"></div>
         </main>
 
         <div id="app-footer"></div>
 
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module" src="js/app.js"></script>
     </body>
 </html>
