--- a/fee/login-form.html
+++ b/fee/login-form.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login - Quiz App</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet"
             href="components/modules/auth/login/login-form.css">
@@ -23,7 +26,7 @@
 
                     <div class="form-actions">
                         <div
-                            class="d-flex center align-center mt-3 login-btn-group">
+                            class="d-flex justify-content-center align-items-center mt-3 login-btn-group">
                             <a href="/index.html" class="link-text">Back to
                                 Home</a>
                             <div id="btn-submit-container"></div>
@@ -45,6 +48,8 @@
             </div>
         </div>
 
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module"
             src="components/modules/auth/login/login-form.js"></script>
     </body>
