--- a/fee/register-form.html
+++ b/fee/register-form.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Register - Quiz App</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet"
             href="components/modules/auth/register/register-form.css">
@@ -15,14 +18,15 @@
         </div>
 
         <div class="login-wrapper">
-            <div class="login-card register-card"> <h2
-                    class="login-title">Register</h2>
+            <div class="login-card register-card">
+                <h2 class="login-title">Register</h2>
 
                 <form id="register-form">
                     <div id="register-inputs"></div>
 
                     <div class="form-actions mt-3">
-                        <div class="d-flex center align-center login-btn-group">
+                        <div
+                            class="d-flex justify-content-center align-items-center login-btn-group">
                             <a href="/index.html" class="link-text">Back to
                                 Home</a>
                             <div id="btn-register-container"></div>
@@ -40,6 +44,8 @@
             </div>
         </div>
 
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module"
             src="components/modules/auth/register/register-form.js"></script>
     </body>
