--- a/fee/index.html
+++ b/fee/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Quiz App</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet">
+
+        <!-- Tailwind CSS CDN -->
+        <script src="https://cdn.tailwindcss.com"></script>
+
+        <!-- Custom CSS (nếu vẫn muốn dùng) -->
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="components/layout/navbar/navbar.css">
         <link rel="stylesheet" href="components/modules/home/intro/intro.css">
@@ -13,23 +15,32 @@
             href="components/modules/home/card/quiz-card.css">
         <link rel="stylesheet" href="components/layout/footer/footer.css">
     </head>
-    <body>
+    <body class=" text-gray-800">
 
+        <!-- Navbar -->
         <div id="app-navbar"></div>
 
+        <!-- Intro -->
         <div id="app-intro"></div>
 
-        <main class="container">
-            <h2 id="quiz-list-title"
-                class="text-center my-5 fw-bold text-uppercase fs-4">Quizzes</h2>
+        <!-- Main content -->
+        <main class="max-w-7xl mx-auto px-4">
+            <h2
+                id="quiz-list-title"
+                class="text-center my-12 font-bold uppercase text-lg tracking-wide">
+                Quizzes
+            </h2>
 
-            <div id="quiz-list-container"></div>
+            <div
+                id="quiz-list-container"
+                class="grid grid-cols-3 sm:grid-cols-2 lg:grid-cols-1 gap-6">
+            </div>
         </main>
 
-        <div id="app-footer"></div>
+        <!-- Footer -->
+        <div id="app-footer" class="mt-16"></div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- App JS -->
         <script type="module" src="js/app.js"></script>
     </body>
 </html>
