--- a/fee/quizzes.html
+++ b/fee/quizzes.html
@@ -17,11 +17,11 @@
     </head>
     <body>
 
-        <div id="app-navbar"></div>
+        <header id="app-navbar"></header>
 
         <div id="quiz-search-area"></div>
 
-        <div id="app-footer"></div>
+        <footer id="app-footer"></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
