--- a/fee/register-form.html
+++ b/fee/register-form.html
@@ -13,13 +13,15 @@
     </head>
     <body>
 
-        <div class="login-bg">
-            <img src="assets/images/bg-log.png" alt="background">
+        <div class="login-bg" aria-hidden="true">
+            <img src="assets/images/bg-log.png" alt>
         </div>
 
-        <div class="login-wrapper">
-            <div class="login-card register-card">
-                <h2 class="login-title">Register</h2>
+        <main class="login-wrapper">
+            <section class="login-card register-card">
+                <header>
+                    <h2 class="login-title">Register</h2>
+                </header>
 
                 <form id="register-form">
                     <div id="register-inputs"></div>
@@ -33,16 +35,17 @@
                         </div>
                     </div>
 
-                    <div class="login-footer mt-3 text-center">
+                    <footer class="login-footer mt-3 text-center">
                         <span class="text-muted">Already have an account?</span>
                         <a href="/login-form.html"
                             class="link-highlight">Login</a>
-                    </div>
+                    </footer>
                 </form>
 
-                <p id="error-message" class="text-danger text-center mt-2"></p>
-            </div>
-        </div>
+                <p id="error-message" class="text-danger text-center mt-2"
+                    aria-live="polite"></p>
+            </section>
+        </main>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
